force-app/main/default/objects/KBD_Creation_TIP_PDA__c/KBD_Creation_TIP_PDA__c.object-meta.xml
<CustomObject>
    <label>KBD Creation- TIP PDA</label>
    <nameField>
        <displayFormat>KBD{0000}</displayFormat>
        <label>KBD Creation- TIP PDA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KBD Creation- TIP PDA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>