force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Action_New_Change__c.field-meta.xml
<CustomField>
    <fullName>Action_New_Change__c</fullName>
    <label>Action (New/Change)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>