force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <description>This Brand code is P&amp;G data should populate automatically</description>
    <label>Brand Code</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>