force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Brand_Description__c.field-meta.xml
<CustomField>
    <fullName>Brand_Description__c</fullName>
    <label>Brand Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>