force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>