force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Due_Date_KBD_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_KBD_Required_Date__c</fullName>
    <label>Due Date/ KBD Required Date</label>
    <type>Date</type>
</CustomField>