force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Future_KBD_End__c.field-meta.xml
<CustomField>
    <fullName>Future_KBD_End__c</fullName>
    <label>Future KBD End</label>
    <type>Date</type>
</CustomField>