force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Future_KBD_Start__c.field-meta.xml
<CustomField>
    <fullName>Future_KBD_Start__c</fullName>
    <label>Future KBD Start</label>
    <type>Date</type>
</CustomField>