force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Future_NOIA_Amount__c.field-meta.xml
<CustomField>
    <fullName>Future_NOIA_Amount__c</fullName>
    <label>Future NOIA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>