force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Future_PG_Eff_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_PG_Eff_Date__c</fullName>
    <label>Future PG Eff Date</label>
    <type>Date</type>
</CustomField>