force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/Future_PG_List__c.field-meta.xml
<CustomField>
    <fullName>Future_PG_List__c</fullName>
    <label>Future PG List</label>
    <length>200</length>
    <type>Text</type>
</CustomField>