force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/KBD_Level_P_P_FPC__c.field-meta.xml
<CustomField>
    <fullName>KBD_Level_P_P_FPC__c</fullName>
    <label>KBD Level(P&amp;P/FPC)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>