force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/KBD_Required__c.field-meta.xml
<CustomField>
    <fullName>KBD_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KBD Required</label>
    <type>Checkbox</type>
</CustomField>