force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/KBD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>KBD_Start_Date__c</fullName>
    <label>KBD Start Date</label>
    <type>Date</type>
</CustomField>