force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/KBD_Status__c.field-meta.xml
<CustomField>
    <fullName>KBD_Status__c</fullName>
    <label>KBD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <default>true</default>
                <label>NEW</label>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>ABORTED</fullName>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>