force-app/main/default/objects/KBD_Creation_TIP_PDA__c/fields/NOI_Amount__c.field-meta.xml
<CustomField>
    <fullName>NOI_Amount__c</fullName>
    <label>NOI Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>